--- a/desafios/desafio10/index.html
+++ b/desafios/desafio10/index.html
@@ -15,10 +15,9 @@
     </header>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <a href="index.html" rel="internal">Home</a>
+        <a href="https://www.techtudo.com.br/informatica/" rel="external" target="_blank">Notícias</a>
+        <a href="https://github.com/SrTesch" target="_blank" rel="external">Contato</a>
     </nav>
 
     <main>
