--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
+            /*
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
+            background-size: cover;
+            background-attachment: fixed;
+            Shorthand pro background:
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main{
@@ -22,11 +30,27 @@
             margin: auto;
             border: 1px solid black;
         }
+
+        ::-webkit-scrollbar{
+            width: 15px;
+        }
+
+        ::-webkit-scrollbar-thumb{
+            background-color: #000;
+            border-radius: 30px;
+        }
+
+        ::-webkit-scrollbar-track{
+            background-color: #ff0043;
+            border-radius: 30px;
+        }
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error unde eum quos aliquam quam a nemo esse libero ratione itaque totam pariatur adipisci odio corrupti facilis alias, doloribus, placeat tempora?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam dolores debitis quasi praesentium labore voluptates, aperiam ab. Cumque, corrupti libero eligendi eaque voluptatibus ex, ratione nam eveniet optio, in vitae?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt totam molestias, tempore, facilis illum omnis magnam placeat laboriosam perferendis ab explicabo laudantium iure cum fugiat incidunt? Incidunt repellendus commodi quos?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error unde eum quos aliquam quam a nemo esse libero ratione itaque totam pariatur adipisci odio corrupti facilis alias, doloribus, placeat tempora?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam dolores debitis quasi praesentium labore voluptates, aperiam ab. Cumque, corrupti libero eligendi eaque voluptatibus ex, ratione nam eveniet optio, in vitae?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt totam molestias, tempore, facilis illum omnis magnam placeat laboriosam perferendis ab explicabo laudantium iure cum fugiat incidunt? Incidunt repellendus commodi quos?</p>        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error unde eum quos aliquam quam a nemo esse libero ratione itaque totam pariatur adipisci odio corrupti facilis alias, doloribus, placeat tempora?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam dolores debitis quasi praesentium labore voluptates, aperiam ab. Cumque, corrupti libero eligendi eaque voluptatibus ex, ratione nam eveniet optio, in vitae?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt totam molestias, tempore, facilis illum omnis magnam placeat laboriosam perferendis ab explicabo laudantium iure cum fugiat incidunt? Incidunt repellendus commodi quos?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error unde eum quos aliquam quam a nemo esse libero ratione itaque totam pariatur adipisci odio corrupti facilis alias, doloribus, placeat tempora?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam dolores debitis quasi praesentium labore voluptates, aperiam ab. Cumque, corrupti libero eligendi eaque voluptatibus ex, ratione nam eveniet optio, in vitae?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt totam molestias, tempore, facilis illum omnis magnam placeat laboriosam perferendis ab explicabo laudantium iure cum fugiat incidunt? Incidunt repellendus commodi quos?</p>
     </main>
 </body>
