--- a/ray/index.html
+++ b/ray/index.html
@@ -11,7 +11,7 @@
     <main>
         <p>Você não é um <br> <span class="fog">FOGÃO</span></p>
         <img src="fogão.jpg" alt="fogãozinho de leve">
-        <p>Mas <span class="fog">EU</span> beijaria <span class="fog">TODAS AS SUAS BOCAS</span></p>
+        <p>Mas <span class="fog">EU</span> beijaria <span class="fog"> <br>TODAS AS SUAS BOCAS</span></p>
     </main>
 </body>
 </html>
